--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:supportsRtl="true"
         android:theme="@style/ToolBarTheme">
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".activity.Main2Activity">
 
         </activity>
-
-        <activity android:name=".activity.Main2Activity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
