搭建设置模块，完善退出登录

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
         <activity android:name=".Main3Activity">
         </activity>
         <activity android:name=".activity.MainActivity">
-
         </activity>
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
@@ -33,6 +32,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.SettingActivity">
+        </activity>
+        <activity android:name=".activity.ChangePasswordActivity">
         </activity>
     </application>
 
