设置模块ui搭建完毕

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         </activity>
         <activity android:name=".activity.ChangePasswordActivity">
         </activity>
+        <activity android:name=".activity.AboutMessageActivity">
+        </activity>
     </application>
 
 </manifest>
