--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,25 +27,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/ToolBarTheme">
-        <activity android:name=".Main3Activity">
+        <activity android:name=".Main3Activity"/>
+        <activity android:name=".activity.MainActivity"
+                  android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.MainActivity">
-        </activity>
-        <activity android:name=".activity.LoginActivity">
+        <activity android:name=".activity.LoginActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SettingActivity">
-        </activity>
-        <activity android:name=".activity.ChangePasswordActivity">
-        </activity>
-        <activity android:name=".activity.AboutMessageActivity">
-        </activity>
-        <activity android:name=".activity.ScanCodeActivity">
-        </activity>
+        <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".activity.ChangePasswordActivity"/>
+        <activity android:name=".activity.AboutMessageActivity"/>
+        <activity android:name=".activity.ScanCodeActivity"/>
+        <activity android:name=".activity.RobHallActivity"/>
+        <activity android:name=".activity.FaultDetailActivity"/>
     </application>
 
 </manifest>
