--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+//    compile 'com.github.bumptech.glide:glide:3.7.0'
     //rx的库
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -75,12 +76,9 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:0.4.0'
     //cardView
     compile 'com.android.support:cardview-v7:24.2.1'
-    /*squareup library*/
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+
     //支持Gson 及 rxjava
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.7'
     compile project(':matiral-spinner')
     compile 'com.orhanobut:logger:1.11'
