--- a/photoviewlibrary/build.gradle
+++ b/photoviewlibrary/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
     // okhttp
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    /*squareup library*/
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+//    compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.github.filippudak.progresspieview:library:1.0.4'
 }
