--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.7@aar') {
         transitive = true
     }
+    //数据库
+    compile 'org.litepal.android:core:1.4.1'
     //加验证的库
     compile 'net.oauth.core:oauth:20100527'
     //zxing扫码
