--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,8 @@ dependencies {
     compile 'net.oauth.core:oauth:20100527'
     //zxing扫码
     compile 'cn.yipianfengye.android:zxing-library:2.0'
+    //图片浏览
     compile project(':photoviewlibrary')
+    //图片选择器
+    compile 'com.yuyh.imgsel:library:1.3.7'
 }
