--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,16 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <!-- 相机权限 -->
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 读写权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <uses-permission android:name="android.permission.VIBRATE"/>
-     <uses-permission android:name="android.permission.PERMISSION_NAME" />
+    <uses-permission android:name="android.permission.PERMISSION_NAME"/>
+
     <application
         android:name=".TianChuangApplication"
         android:allowBackup="true"
@@ -38,16 +41,53 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SettingActivity"/>
-        <activity android:name=".activity.ChangePasswordActivity"/>
-        <activity android:name=".activity.AboutMessageActivity"/>
-        <activity android:name=".activity.ScanCodeActivity"/>
-        <activity android:name=".activity.RobHallActivity"/>
-        <activity android:name=".activity.FaultDetailActivity"/>
-        <activity android:name=".activity.InnerReportsActivity">
-        </activity>
-        <activity android:name=".activity.MenuInnerReportsActivity">
-        </activity>
+
+        <!--设置模块-->
+        <activity
+            android:name=".activity.SettingActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
+        <!--修改密码模块-->
+        <activity
+            android:name=".activity.ChangePasswordActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
+        <!--关于物管宝-->
+        <activity
+            android:name=".activity.AboutMessageActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
+        <!--扫一扫-->
+        <activity
+            android:name=".activity.ScanCodeActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
+        <!--抢单大厅-->
+        <activity
+            android:name=".activity.RobHallActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
+        <!--故障详情页面-->
+        <activity
+            android:name=".activity.FaultDetailActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
+        <!--内部报事页面-->
+        <activity
+            android:name=".activity.InnerReportsActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+        <!--内部报事-->
+        <activity
+            android:name=".activity.MenuInnerReportsActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
