--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/ToolBarTheme">
-        <activity android:name=".Main3Activity"/>
-        <activity
-            android:name=".activity.MainActivity"
-            android:screenOrientation="portrait">
-        </activity>
+
         <activity
             android:name=".activity.LoginActivity"
             android:screenOrientation="portrait">
@@ -41,6 +37,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".Main3Activity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".activity.MainActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
 
         <!--设置模块-->
         <activity
