--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
 
@@ -27,6 +28,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/ToolBarTheme">
+
         <activity
             android:name=".activity.LoginActivity"
             android:screenOrientation="portrait">
@@ -36,61 +38,65 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".Main3Activity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
+
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
-        <!-- 设置模块 -->
+        <!--设置模块-->
         <activity
             android:name=".activity.SettingActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
-        <!-- 修改密码模块 -->
+        <!--修改密码模块-->
         <activity
-            android:name=".activity.ChangePasswordActivity"
+            android:name=".activity.ModifyPasswordActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
-        <!-- 关于物管宝 -->
+        <!--关于物管宝-->
         <activity
             android:name=".activity.AboutMessageActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
-        <!-- 扫一扫 -->
+        <!--扫一扫-->
         <activity
             android:name=".activity.ScanCodeActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
-        <!-- 抢单大厅 -->
+        <!--抢单大厅-->
         <activity
             android:name=".activity.RobHallActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
-        <!-- 故障详情页面 -->
+        <!--故障详情页面-->
         <activity
             android:name=".activity.FaultDetailActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
-        <!-- 内部报事页面 -->
+        <!--内部报事页面-->
         <activity
             android:name=".activity.InnerReportsActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
-        <!-- 内部报事 -->
+        <!--内部报事-->
         <activity
             android:name=".activity.MenuInnerReportsActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activity.DataSearchActivity">
+        </activity>
 
         <!--投诉建议-->
         <activity
