--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,35 +1,37 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.tianchuang.ihome_b"
-        minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         multiDexEnabled true
     }
 
     //签名
     signingConfigs {
         release {
-            storeFile file("whzf.keystore")
-            storePassword "000000"
-            keyAlias "whzf"
-            keyPassword "000000"
+            storeFile file("tianchuang.keystore")
+            storePassword "666666"
+            keyAlias "tianchuang"
+            keyPassword "666666"
+            v2SigningEnabled false
         }
     }
 
     buildTypes {
 
         release {
-            minifyEnabled true //混淆
-            zipAlignEnabled true //内存对齐
-            shrinkResources true //移除无用的resource文件
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            debuggable false
+            zipAlignEnabled true//内存对齐
+            minifyEnabled true//混淆
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
         debug {
