--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,15 @@ allprojects {
         maven { url "https://jitpack.io" }
     }
 }
-
+ext {
+    buildToolsVersion = "25.0.2"
+    compileSdkVersion = 25
+    targetSdkVersion = compileSdkVersion
+    minSdkVersion = 15
+    versionCode = 1
+    versionName = "1.0.1"
+    supportLibVersion = '25.1.0'
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
