--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,9 @@ android {
 
         release {
             signingConfig signingConfigs.release
-            debuggable false
             zipAlignEnabled true//内存对齐
             minifyEnabled true//混淆
-            shrinkResources false
+            shrinkResources true//资源压缩
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -72,7 +71,9 @@ dependencies {
     }
     compile project(':photoviewlibrary')
     //cardView
-    compile 'com.android.support:cardview-v7:25.2.0'
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     //rx的库
@@ -90,11 +91,9 @@ dependencies {
     compile 'net.oauth.core:oauth:20100527'
     //zxing扫码
     compile 'cn.yipianfengye.android:zxing-library:2.0'
-    compile 'com.android.support:design:25.2.0'
     //图片选择器
     compile 'com.yuyh.imgsel:library:1.3.7'
     //气泡背景框
-    compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.daasuu:BubbleLayout:1.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile 'junit:junit:4.12'
