--- a/photoviewlibrary/build.gradle
+++ b/photoviewlibrary/build.gradle
@@ -20,10 +20,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    // okhttp
     /*squareup library*/
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
