我的任务进行中列表,管理通知列表,公告详情完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,7 +123,8 @@
             android:name=".activity.FormSubmitActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.MyFormActivity"></activity>
+        <activity android:name=".activity.MyFormActivity" />
+        <activity android:name=".activity.ManageNotificationActivity"></activity>
     </application>
 
 </manifest>
