--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,5 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.contrarywind:Android-PickerView:3.1.1'
 }
