处理表单图片提交,接入主页数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,7 @@
         <activity
             android:name=".activity.MyTaskActivity"
             android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait" />
         <!-- 表单申报 -->
         <activity
