主页列表展示及跳转完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,7 +125,7 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity android:name=".activity.MyFormActivity" />
-        <activity android:name=".activity.ManageNotificationActivity"></activity>
+        <activity android:name=".activity.ManageNotificationActivity"/>
     </application>
 
 </manifest>
