--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,10 +92,11 @@ dependencies {
     compile 'cn.yipianfengye.android:zxing-library:2.0'
     compile 'com.yuyh.imgsel:library:1.3.7'
     compile 'com.daasuu:BubbleLayout:1.1.1'
+    compile 'com.contrarywind:Android-PickerView:3.1.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile 'com.contrarywind:Android-PickerView:3.1.1'
 }
