--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,8 +111,8 @@
         <activity
             android:name=".activity.MyTaskActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <!-- 表单申报 -->
         <activity
             android:name=".activity.DeclareFormActivity"
@@ -125,7 +125,8 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity android:name=".activity.MyFormActivity" />
-        <activity android:name=".activity.ManageNotificationActivity"/>
+        <activity android:name=".activity.ManageNotificationActivity" />
+        <activity android:name=".activity.TaskSelectActivity"></activity>
     </application>
 
 </manifest>
