--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <application
         android:name=".TianChuangApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/ToolBarTheme">
@@ -124,9 +124,13 @@
             android:name=".activity.FormSubmitActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
+        <!--我的表单-->
         <activity android:name=".activity.MyFormActivity" />
+        <!--管理通知-->
         <activity android:name=".activity.ManageNotificationActivity" />
-        <activity android:name=".activity.TaskSelectActivity"></activity>
+        <!--任务选择-->
+        <activity android:name=".activity.TaskSelectActivity"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
