--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <application
         android:name=".TianChuangApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/logo"
+        android:icon="@mipmap/desk_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/ToolBarTheme">
