--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,8 +91,8 @@
         <activity
             android:name=".activity.DataSearchActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <!-- 投诉建议 -->
         <activity
             android:name=".activity.ComplainSuggestActivity"
@@ -125,13 +125,15 @@
             android:name=".activity.FormSubmitActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-        <!--我的表单-->
+        <!-- 我的表单 -->
         <activity android:name=".activity.MyFormActivity" />
-        <!--管理通知-->
+        <!-- 管理通知 -->
         <activity android:name=".activity.ManageNotificationActivity" />
-        <!--任务选择-->
-        <activity android:name=".activity.TaskSelectActivity"
+        <!-- 任务选择 -->
+        <activity
+            android:name=".activity.TaskSelectActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".activity.PersonalInfoActivity"></activity>
     </application>
 
 </manifest>
