使用mvp,重构修改密码页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,7 @@
 
         <!-- 修改密码模块 -->
         <activity
-            android:name=".activity.ModifyPasswordActivity"
+            android:name=".mvp.modifypassword.ModifyPasswordActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
 
