--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,7 +174,7 @@
 
         <!-- 【可选】APP实现的Receiver，用于接收消息透传和操作结果的回调，请根据需要添加 -->
         <!-- YOUR_PACKAGE_PATH.CustomPushReceiver需要改为自己的Receiver： -->
-        <receiver android:name="com.tianchuang.ihome_b.xgmessage.XGReceiver"
+        <receiver android:name="com.tianchuang.ihome_b.xgpush.XGReceiver"
             android:exported="true" >
             <intent-filter>
                 <!-- 接收消息透传 -->
