--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
-retrolambda{
+retrolambda {
     javaVersion JavaVersion.VERSION_1_7
 }
 android {
@@ -45,7 +45,7 @@ android {
 
     sourceSets {
         main {
-            jniLibs.srcDirs=['libs']
+            jniLibs.srcDirs = ['libs']
         }
 
     }
@@ -73,6 +73,7 @@ repositories {
 }
 
 dependencies {
+    //todo 调试工具,正式发布时去掉
     //检查内存泄露
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.7@aar') {
@@ -80,16 +81,18 @@ dependencies {
     }
     compile project(':photoviewlibrary')
     //cardView
-    compile 'com.android.support:cardview-v7:25.3.0'
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     //rx的库
     //数据库
     //加验证的库
     //zxing扫码
     //图片选择器
     //气泡背景框
+    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -106,10 +109,10 @@ dependencies {
     compile 'com.daasuu:BubbleLayout:1.1.1'
     compile 'com.contrarywind:Android-PickerView:3.1.1'
     compile 'q.rorbin:badgeview:1.1.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
+    testCompile 'junit:junit:4.12'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
