--- a/photoviewlibrary/build.gradle
+++ b/photoviewlibrary/build.gradle
@@ -24,8 +24,11 @@ dependencies {
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
     /*squareup library*/
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+//    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    compile('com.github.ihsanbal:LoggingInterceptor:2.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
     compile 'com.github.filippudak.progresspieview:library:1.0.4'
 }
